feat: Improved the existing CORS filter